    (i.e. the intended default rather than the first in alphabetical order
    of country code), working around a missing feature in debconf.
  * Pick a sensible default city for countries with multiple zones but no
    explicit default city (closes: Malone #43914).
  * Remove obsolete Recommends: gparted from ubiquity; ubiquity-frontend-gtk
    already depends on it.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Sep 2006 12:13:49 +0100

ubiquity (1.1.19) edgy; urgency=low

  * Reconfigure usplash (closes: Malone #59320).
  * Divert away update-initramfs while configuring hardware-specific
    packages, and run it just once at the end.
  * Display a warning if you try to mount a FAT or NTFS filesystem where
    POSIX semantics are required (closes: Malone #48410).
  * GTK frontend: Scroll the mount points table if required (closes: Malone
    #51796).
  * Ignore failures from os.utime on directories. I don't know why I get a
    disproportionate number of reports of this failing, but to be honest I
    don't care enough about directory timestamps to investigate.
  * Add trivial pid file locking, allowing ubiquity to exit gracefully if
    you try to run more than one instance of it at once; previously it blew
    up much more spectacularly upon finding that the debconf database was
    locked (closes: Malone #46569).
  * Run gnome-screensaver-command/xscreensaver-command with LC_ALL=C to
    reduce noise on stderr.
  * Automatic update of included source packages: console-setup 1.7ubuntu9,
    partman-auto 54ubuntu3, partman-basicfilesystems 47ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Sat, 16 Sep 2006 00:45:27 +0100

ubiquity (1.1.18) edgy; urgency=low

  [ Jonathan Riddell ]
  * KDE frontend: Enable buttons on summary page when performing automatic
    partitioning too.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 14 Sep 2006 13:09:33 +0100

ubiquity (1.1.17) edgy; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend