@@ -39,7 +39,7 @@ Description: Ubuntu artwork for Ubiquity live installer
 
 Package: ubiquity-frontend-gtk
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ubiquity, python-glade2, gparted (>= 0.1-0ubuntu3), python-gtk2, iso-codes, python-problem-report, python-apport-utils
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, ubiquity, python-glade2, gparted (>= 0.2.5-1.1ubuntu6), python-gtk2, iso-codes, python-problem-report, python-apport-utils
 Recommends: gnome-system-tools
 Conflicts: ubuntu-express-frontend-gtk, espresso-frontend-gtk
 Replaces: ubuntu-express-frontend-gtk, espresso-frontend-gtk
